# CanonicalTopDownDRPlanner

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md
doc/: .gitignore  README.md  TODO.md  notes.txt
doc/GMP2015/: appendix_a.tex  appendix_b.tex  gmp2015.cls  paper.bib  paper.tex  s00_abstract.tex  s01_introduction.tex  s02_preliminaries.tex  s03_drp.tex  s04_recombination.tex  s05_problems.tex  s05_solnspacenav.tex  s06_conclusion.tex  s07_problempinning.tex  s08_pinnedline.tex  s09_conclusion.tex  s09_problems.tex
doc/General_Work/: DRP_2d.tex  DRP_general.tex  notes-old.tex  personalNotes.sty
doc/img/: crosslink.eps  pinned.eps
script/: .pentl2.xmd.swp  README.md  p2dot.py  pentl2.xmd.p  readme.txt
script/examples/: dodecp.l0  dodecp.l1  dodecpl1.xmd  dodecpl1.xmd.p.dot  dodecpl2.xmd.p  dodecpl2.xmd.p.dot  dodecq.l0  dodecq.l1  dodecq.l2  dodecql1.xmd.p  dodecql1.xmd.p.dot  dodecql2.xmd.p  dodecql2.xmd.p.dot  dvarp.l0  dvarp.l2  dvarpl1.xmd.p  dvarpl1.xmd.p.dot  dvarpl2.xmd.p  dvarpl2.xmd.p.dot  dvarq.l2  dvarql1.xmd.p.dot  dvarql2.xmd.p.dot  pent.l3  pentl2.xmd.p.dot  pentl3.xmd  pentl3.xmd.p  pentl3.xmd.p.dot
script/subdivision programs by William Floyd/: subdivide.c
src/: README.md  main.cpp
src/Application/: Animated_Graph_Realization_Window.cpp  Animated_Graph_Realization_Window.hpp  App_Window_2D.cpp  App_Window_2D.hpp  CMakeLists.txt  DRP_Display_Window.cpp  DRP_Display_Window.hpp  Graph_Display_Window.cpp  (+1 more)
test_files/: 0test.dot  bigtrianglething.dot  cube_with_diagonal.dot  demo0.dot  demo0_sub.dot  demo0_sub2.dot  demo1.dot  fronteir.dot  fronteir_minimal.dot  henneberg1.dot  k33.dot  k33_with_3_appendages.dot  out.dot  pentl2.xmd.p.dot  seriesparallel0.dot  square_edge_triangle.dot  triangle_of_k33s.dot  triangle_of_k33s_all_trivial.dot  triforce.dot  triforce_annotated.dot
(+202 files in other folders)
